@@ -103,7 +103,7 @@ public class AccountWebClientTests {
     @Test
     public void createAccount_WebClient_blocking() throws Exception {
         // use a unique number to avoid conflicts
-        String number = String.format("12345%4d", random.nextInt(10000));
+        String number = "12345%4d".formatted(random.nextInt(10000));
         Account account = new Account(number, "John Doe");
         account.addBeneficiary("Jane Doe");
 
