@@ -74,7 +74,7 @@ public class AccountClientTests {
 	public void createAccount() {
 		String url = BASE_URL + "/accounts";
 		// use a random account number to avoid conflict
-		String number = String.format("12345%4d", random.nextInt(10000));
+		String number = "12345%4d".formatted(random.nextInt(10000));
 		Account account = new Account(number, "John Doe");
 		account.addBeneficiary("Jane Doe");
 		URI newAccountLocation = restTemplate.postForLocation(url, account);
